package com.greentree.engine.moon.mesh;

public interface Mesh {
	
	boolean hasNormals();
	boolean hasTextureCoord();
	
}
